2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.c (logview_add_logs_from_names): Expand all rows in the
	side pane log tree at startup.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.c (logview_init): Now that we have only one column,
	there's no need for the treeview hints (and it's cleaner without).

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* loglist.c: (loglist_find_directory), (loglist_add_directory),
	(loglist_add_log):
	* logrtns.c: (log_extract_dirname):
	* logrtns.h:
	* userprefs.c: (prefs_store_active_log), (prefs_save): Some
	refactoring to make it easier to read.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.c: (logview_save_prefs), (logview_destroy):
	* userprefs.c: (prefs_store_active_log), (prefs_save): Make sure
	that the active log is correctly saved when an archive is displayed.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* log_repaint.c: (logview_create_model):
	* loglist.c: (loglist_find_directory), (loglist_find_log),
	(loglist_unbold_log), (loglist_bold_log), (loglist_select_log),
	(loglist_remove_log), (loglist_add_log), (loglist_init):
	* logrtns.c: (log_extract_filename):
	* logrtns.h:
	* logview.c: (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_file_selected_cb):
	* main.c: (main): Add a tree view in the side bar to group logs by
	directory.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* log_repaint.c (logview_update_version_bar): Make sure to show the version bar.
	* logview.c (logview_search): Make sure to show the filter bar.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* misc.c (month): 
	* logview.c:
	* loglist.c: Remove the restoration_complete variable. Use
	GTK_WIDGET_VISIBLE instead.
	
2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.h:
	* main.c: (main): Be smarter when showing the widget.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* main.c (main): Show a "busy" cursor while loading logs. 
